--- a/comparison_results.ipynb
+++ b/comparison_results.ipynb
@@ -1,26 +1,61 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Overview\n",
+        "\n",
+        "This notebook provides a guide to reproduce our results used to compare the LSTM and multi-layer feed-forward neural network model architectures for predicting hourly temperature in Los Angeles using time series prediction.\n",
+        "\n",
+        "Serving this aim, this workflow contains:\n",
+        "* Data loading from ______ dataset\n",
+        "* Data preprocessing\n",
+        "* Model training on various weather metrics\n",
+        "* Direct model architecture comparisons"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Getting Started\n",
+        "\n",
+        "Prior to running this notebook and importing the following Python models, ensure that our custom Python environment has been created and is being used to run this notebook, as specified in our [README](README.md)."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 1,
       "metadata": {
         "id": "_elTMt6fgyZZ"
       },
       "outputs": [],
       "source": [
+        "from pathlib import Path\n",
+        "from datetime import datetime, timedelta\n",
+        "import math\n",
+        "import random\n",
+        "\n",
         "import tensorflow as tf\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "from ish_parser import ish_parser\n",
-        "from datetime import datetime, timedelta\n",
-        "import math\n",
-        "import random\n",
         "from IPython.display import clear_output"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Read Weather Data\n",
+        "\n",
+        "Add commentary here..."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 5,
       "metadata": {
         "id": "KVNh_haeM7fd"
       },
@@ -61,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -258,7 +293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -273,13 +308,26 @@
         "\n",
         "all_weather = {}\n",
         "\n",
+        "data_path = Path().cwd() / Path(\"data\")\n",
+        "\n",
         "for (place, station_id) in stations.items():\n",
         "    all_weather[place] = {}\n",
         "\n",
         "    for year in years:\n",
-        "        observations = read_ish_file(f\"./data/{station_id}-{year}\")\n",
-        "        # print(f\"/Users/carterharrison/Desktop/weather/{year}/{station_id}-{year}\")\n",
+        "        file_path = data_path / Path(f\"{station_id}-{year}\")\n",
+        "        observations = read_ish_file(f\"{file_path}\")\n",
         "        all_weather[place][year] = ManyObservationAggregator(observations, int(year), place)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Data Preprocessing\n",
+        "\n",
+        "Here, training, validation, and test datasets are divided and stored by year. This infrastructure supports variable window lengths for both inputted time series (number of immediately previous hourly weather measurements considered before making temperature forecasts) and outputted time series (number of hours in future to predict temperature). Note that input and output window combinations summing to a multiple of 24 start all windows at midnight.\n",
+        "\n",
+        "As discussed in greater detail in our report, note that normalization only takes place on input variables to enable training on unaltered outputs."
       ]
     },
     {
@@ -297,6 +345,9 @@
         "    return running\n",
         "\n",
         "def norm(x):\n",
+        "    \"\"\"\n",
+        "    Input normalization strategy\n",
+        "    \"\"\"\n",
         "    mean = np.mean(x)\n",
         "    std = np.std(x)\n",
         "    s = (x - mean)/std\n",
@@ -306,30 +357,17 @@
         "\n",
         "    return (s-min)/(max-min)\n",
         "\n",
-        "def denorm(all, x):\n",
-        "    mean = np.mean(all)\n",
-        "    std = np.std(all)\n",
-        "    s = (all - mean)/std\n",
-        "    max = np.max(s)\n",
-        "    min = np.min(s)\n",
-        "    mid = ((x * (max-min)) + min)\n",
-        "    return (mid*std) + mean\n",
-        "\n",
         "def window_array(array, window_length) -> list:\n",
         "    \"\"\"Split a 2D array into list of non-overlapping windows along the first (usu time) axis, \n",
         "    discarding remainder.\"\"\"\n",
         "    num_windows = len(array) // window_length\n",
         "    windows = [array[i*window_length:(i+1)*window_length] for i in range(num_windows)]\n",
-        "    return windows"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 98,
-      "metadata": {},
-      "outputs": [],
-      "source": [
+        "    return windows\n",
+        "\n",
         "class ModelPreProcess:\n",
+        "    \"\"\"\n",
+        "    Load and store training, validation, and testing data for custom dataset metrics.\n",
+        "    \"\"\"\n",
         "    def __init__(self, input_metrics, output_metrics, train_years, validation_years, test_years):\n",
         "        self.train_years, self.validation_years = train_years, validation_years\n",
         "        self.input_metrics, self.output_metrics = input_metrics, output_metrics\n",
@@ -378,19 +416,18 @@
         "        outputs_by_metric = windowed_metrics[:, self.in_window_length:, len(self.input_metrics):]\n",
         "        full_outputs_by_metric = windowed_metrics[:, :, len(self.input_metrics):]\n",
         "\n",
-        "        return inputs_by_metric, outputs_by_metric, full_outputs_by_metric\n",
+        "        return inputs_by_metric, outputs_by_metric, full_outputs_by_metric"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Model Training\n",
         "\n",
-        "        # windowed_inputs_by_metric = [window_array(input[0], self.in_window_length) for input in inputs_by_metric]\n",
-        "        # windowed_outputs_by_metric = [window_array(output[0], self.in_window_length+self.out_window_length) for output in full_outputs_by_metric]\n",
+        "In this section, we have a consistent interface for our LSTM, multi-layer feed-forward neural network, and hybrid architecture approaches, supporting real-time loss and metric graphs while training, model evaluation, integrated hyperparameter tuning, and output plotting. \n",
         "\n",
-        "        # pairs = list(zip(windowed_inputs_by_metric, windowed_outputs_by_metric))\n",
-        "        # random.shuffle(pairs)\n",
-        "        # shuffled_inputs, shuffled_outputs = zip(*pairs)\n",
-        "\n",
-        "        # orged_x = np.transpose(list(shuffled_inputs)).swapaxes(0,1)\n",
-        "        # orged_y = np.transpose(list(shuffled_outputs)).swapaxes(0,1)\n",
-        "\n",
-        "        # return orged_x, orged_y\n"
+        "Interactive loss and metric graphs while training were implemented in the `PlotLearning` class (credit [Daniel Carlander](https://gist.github.com/danicrg/ab3bc7c330ce152bcf643231de4820e9))."
       ]
     },
     {
@@ -443,7 +480,10 @@
         "        plt.tight_layout()\n",
         "        plt.show()\n",
         "        \n",
-        "class WeatherPredictor:\n",
+        "class LSTMWeatherPredictor:\n",
+        "    \"\"\"\n",
+        "    Weather prediction model using LSTM architecture.\n",
+        "    \"\"\"\n",
         "    def __init__(self, in_window_len, out_window_len, n_features_in, n_features_out, epochs, batch_size):\n",
         "        self.epochs = epochs\n",
         "        self.in_window_len = in_window_len\n",
@@ -513,6 +553,9 @@
         "            plt.figure()\n",
         "\n",
         "class HybridWeatherPredictor:\n",
+        "    \"\"\"\n",
+        "    Weather prediction model using both LSTM and multi-layer feed-forward neural network.\n",
+        "    \"\"\"\n",
         "    def __init__(self, in_window_len, out_window_len, n_features_in, n_features_out, epochs, batch_size):\n",
         "        self.epochs = epochs\n",
         "        self.in_window_len = in_window_len\n",
@@ -583,6 +626,9 @@
         "            plt.figure()\n",
         "\n",
         "class LinearWeatherPredictor:\n",
+        "    \"\"\"\n",
+        "    Weather prediction model using multi-layer feed-forward neural network.\n",
+        "    \"\"\"\n",
         "    def __init__(self, in_window_len, out_window_len, n_features_in, n_features_out, epochs, batch_size):\n",
         "        self.epochs = epochs\n",
         "        self.in_window_len = in_window_len\n",
@@ -683,7 +729,7 @@
         "        self.epochs = epochs\n",
         "        self.batch_size = 32\n",
         "\n",
-        "        self.lstm_model = WeatherPredictor(self.in_window_len, self.out_window_len, self.n_features_in, self.n_features_out, self.epochs, self.batch_size)\n",
+        "        self.lstm_model = LSTMWeatherPredictor(self.in_window_len, self.out_window_len, self.n_features_in, self.n_features_out, self.epochs, self.batch_size)\n",
         "        self.hybrid_model = HybridWeatherPredictor(self.in_window_len, self.out_window_len, self.n_features_in, self.n_features_out, self.epochs, self.batch_size)\n",
         "        self.linear_model= LinearWeatherPredictor(self.in_window_len, self.out_window_len, self.n_features_in, self.n_features_out, self.epochs, self.batch_size)\n",
         "\n",
@@ -2109,7 +2155,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6"
+      "version": "3.10.13"
     }
   },
   "nbformat": 4,
